[package]
name = "r3_example_basic"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2021"
publish = false

[dependencies]
r3_port_std = { path = "../../src/r3_port_std" }
r3_kernel = { path = "../../src/r3_kernel", features = ["system_time"] }
r3 = { path = "../../src/r3" }

log = { version = "0.4.8" }
