[package]
name = "r3_example_basic"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
r3_port_std = { workspace = true }
r3_kernel = { workspace = true, features = ["system_time"] }
r3 = { workspace = true, features = ["sync"] }

log = { version = "0.4.8" }
