[package]
name = "basic_gr_peach"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2021"
publish = false

[dependencies]
r3_support_rza1 = { path = "../../src/r3_support_rza1", features = ["semver-exempt"] }
r3_port_arm = { path = "../../src/r3_port_arm" }
r3 = { path = "../../src/r3", features = ["system_time"] }

rtt-target = { version = "0.2.0" }
rza1 = { version = "0.2.0", features = ["cpg", "gpio", "scif"] }
