[package]
name = "r3_example_basic_gr_peach"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
r3_support_rza1 = { path = "../../src/r3_support_rza1", features = ["semver-exempt"] }
r3_port_arm = { path = "../../src/r3_port_arm" }
r3_kernel = { path = "../../src/r3_kernel", features = ["system_time"] }
r3 = { path = "../../src/r3" }

rtt-target = { version = "0.3.0" }
rza1 = { version = "0.2.0", features = ["cpg", "gpio", "scif"] }
