[package]
name = "constance_example_basic_nucleo_f401re"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
publish = false

# `cortex-m-rt` and other crates don't build on a hosted target. We don't want
# `cargo test --all` to fail because of this, so we put dependencies in the
# target-specific section.
[target."cfg(target_os = \"none\")".dependencies]
constance = { path = "../../src/constance" }
constance_port_arm_m = { path = "../../src/constance_port_arm_m" }
nucleo-f401re = "0.4.1"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
