[package]
name = "r3_example_basic_nucleo_f401re"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2021"
publish = false

# `cortex-m-rt` and other crates don't build on a hosted target. We don't want
# `cargo test --all` to fail because of this, so we put dependencies in the
# target-specific section.
[target."cfg(target_os = \"none\")".dependencies]
r3_port_arm_m = { path = "../../src/r3_port_arm_m" }
r3 = { path = "../../src/r3", features = ["system_time"] }

panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
nucleo-f401re = { version = "0.4.1" }
cortex-m-rt = { version = "0.6.12" }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
