[package]
name = "r3_example_basic_rp_pico"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

# `cortex-m-rt` and other crates don't build on a hosted target. We don't want
# `cargo test --all` to fail because of this, so we put dependencies in the
# target-specific section.
[target."cfg(target_os = \"none\")".dependencies]
r3_support_rp2040 = { workspace = true, features = ["semver-exempt"] }
r3_port_arm_m = { workspace = true }
r3_kernel = { workspace = true, features = ["system_time"] }
r3 = { workspace = true, features = ["sync"] }

rp2040-boot2 = { version = "0.2.0" }
rp2040-pac = { version = "0.4.0" }
cortex-m-rt = { version = "0.6.12", features = ["device"] }