[package]
name = "r3_example_common"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
embedded-graphics = { version = "0.7.1" }

[build-dependencies]
embedded-graphics = { version = "0.7.1" }
image = { version = "0.24.1", default-features = false, features = ["gif"] }
nsvg = { version = "0.5.1", default-features = false }
zstd = { version = "0.12.2" }
