[package]
name = "arm_semihosting"
version = "0.3.5"
authors = [
    "yvt <i@yvt.jp>",

    # The authors of `cortex-m-semihosting`
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <japaricious@gmail.com>",
]
edition = "2018"
publish = false

[features]
no-semihosting = []

[dependencies]
