[package]
name = "constance"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
description = "Static RTOS testing the limit of Rust's const eval and generics"
categories = ["embedded", "no-std"]
keywords = ["constance", "rtos"]
repository = "https://github.com/yvt/Constance"

[dependencies]
constance_parse_generics = { version = "0.1.2", path = "../constance_parse_generics" }

num-integer = { version = "0.1.42", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
pin-utils = { version = "0.1.0" }
staticvec = { version = "0.10.1", default-features = false }
svgbobdoc = { version = "0.2.2" }
tokenlock = { version = "0.3.0", default-features = false }
bitflags = { version = "1.2.1" }
chrono = { version = "0.4.13", optional = true, default-features = false }

[dependencies.atomic_ref]
# - “Make the crate `no_std`”
#   <https://github.com/mystor/atomic_ref/pull/1>
# - “Make `AtomicRef::new` `const fn` (nightly-only)”
#   <https://github.com/mystor/atomic_ref/pull/2>
git = "https://github.com/yvt/atomic_ref.git"
rev = "37523c17a2a535f4d04c204d65d2742647abed25"
features = ["nightly"]

[dev-dependencies]
quickcheck_macros = "0.9.1"
env_logger = "0.7.1"
quickcheck = "0.9.2"
log = "0.4.8"
