[package]
name = "constance"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
description = "Static RTOS testing the limit of Rust's const eval and generics"
categories = ["embedded", "no-std"]
keywords = ["constance", "rtos"]
repository = "https://github.com/yvt/Constance"

[features]
default = []
inline_syscall = []
system_time = []

[dependencies]
assert_matches = { version = "1.4.0" }
num-integer = { version = "0.1.42", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
pin-utils = { version = "0.1.0" }
staticvec = { version = "0.10.5", default-features = false }
svgbobdoc = { version = "0.2.2" }
tokenlock = { version = "0.3.0", default-features = false }
bitflags = { version = "1.2.1" }
chrono = { version = "0.4.13", optional = true, default-features = false }

[dev-dependencies]
quickcheck_macros = "0.9.1"
env_logger = "0.7.1"
quickcheck = "0.9.2"
log = "0.4.8"
