[package]
name = "constance_parse_generics"
version = "0.1.2"
authors = [
    "Daniel Keep <daniel.keep@gmail.com>",
    "yvt <i@yvt.jp>",
]
description = "Fork of `parse-generics-shim` for Constance"
repository = "https://github.com/yvt/Constance"
license = "MIT OR Apache-2.0"

[dev-dependencies]
rustc_version = "0.1.7"
