[package]
name = "constance_port_arm"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Arm-A port for Constance"
categories = ["embedded", "no-std"]
keywords = ["constance", "arm"]
repository = "https://github.com/yvt/Constance"

[features]
preload-registers = []

[dependencies]
constance_portkit = { version = "0.1.0", path = "../constance_portkit" }
constance = { version = "0.1.0", path = "../constance" }

register = "0.5.1"
r0 = "0.2.2"
