[package]
name = "constance_port_arm_m"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Cortex-M port for Constance"
categories = ["embedded", "no-std"]
keywords = ["constance", "arm"]
repository = "https://github.com/yvt/Constance"

[features]
preload-registers = []

[dependencies]
constance_portkit = { path = "../constance_portkit" }
constance = { path = "../constance" }

# `cortex-m-rt` doesn't build on a hosted target. We don't want
# `cargo test --all` to fail because of this, so we put these in the
# target-specific section.
[target."cfg(target_os = \"none\")".dependencies]
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
