[package]
name = "constance_port_arm_m_test_driver"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[features]
kernel_benchmarks = ["run"]
kernel_tests = ["run"]
run = [
    "constance",
    "constance_port_arm_m",
    "cortex-m",
    "cortex-m-rt",
    "log",
    "constance_test_suite",
]
output-rtt = [
    "panic-rtt-target",
    "rtt-target",
]
output-semihosting = [
    "cortex-m-semihosting",
    "panic-semihosting",
]
cpu-lock-by-basepri = []

[dependencies]
constance_port_arm_m = { path = "../constance_port_arm_m", optional = true }
constance = { path = "../constance", optional = true }

cortex-m-semihosting = { version = "0.3.5", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }
panic-rtt-target = { version = "0.1.0", optional = true, features = ["cortex-m"] }
cortex-m-rt = { version = "0.6.12", optional = true, features = ["device"] }
rtt-target = { version = "0.2.0", optional = true, features = ["cortex-m"] }
cortex-m = { version = "0.6.3", optional = true, features = ["inline-asm"] }
log = { version = "0.4.8", optional = true }

[dependencies.constance_test_suite]
path = "../constance_test_suite"
default-features = false
features = [
    # compile the test case specified by `CONSTANCE_TEST`
    "tests_selective",
    # enable all of Constance's optional features
    "full",
]
optional = true
