[package]
name = "constance_port_arm_test_driver"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[features]
kernel_benchmarks = ["run"]
kernel_tests = ["run"]
run = [
    "constance_test_suite",
    "constance_port_arm",
    "constance",
    "register",
    "log",
]

board-realview_pbx_a9 = [
    "output-semihosting",
]
board-rza1 = [
    "output-semihosting",
    "constance_support_rza1",
    "rza1",
]

output-semihosting = [
    "arm_semihosting",
    "staticvec",
]

[dependencies]
constance_support_rza1 = { path = "../constance_support_rza1", optional = true, features = ["semver-exempt"] }
constance_port_arm = { path = "../constance_port_arm", optional = true }
arm_semihosting = { path = "../arm_semihosting", optional = true }
constance = { path = "../constance", optional = true }

staticvec = { version = "0.10.5", optional = true, default-features = false }
register = { version = "0.5.1", optional = true }
rza1 = { version = "0.2.0", optional = true, features = ["cpg", "gpio", "scif"] }
log = { version = "0.4.8", optional = true }

[dependencies.constance_test_suite]
path = "../constance_test_suite"
default-features = false
features = [
    # compile the test case specified by `CONSTANCE_TEST`
    "tests_selective",
    # enable all of Constance's optional features
    "full",
]
optional = true
