[package]
name = "constance_port_riscv"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "RISC-V port for Constance"
categories = ["embedded", "no-std"]
keywords = ["constance", "riscv"]
repository = "https://github.com/yvt/Constance"

[features]
emulate-lr-sc = []

[dependencies]
constance_portkit = { path = "../constance_portkit" }
constance = { path = "../constance" }

register = { version = "0.5.1" }
riscv-rt = { version = "0.8.0" }
riscv = { version = "0.6.0" }
