[package]
name = "constance_port_riscv_test_driver"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[features]
test = [
    "constance_test_suite",
    "constance_port_riscv",
    "constance",
    "riscv-rt",
    "riscv",
    "log",
]
output-e310x-uart = [
    "e310x-hal",
    "output-uart",
    "nb",
]
output-uart = []

[dependencies]
constance_port_riscv = { path = "../constance_port_riscv", optional = true }
constance = { path = "../constance", optional = true }

e310x-hal = { version = "0.8.3", optional = true, features = ["g002"] }
riscv-rt = { version = "0.8.0", optional = true }
riscv = { version = "0.6.0", optional = true }
log = { version = "0.4.8", optional = true }
nb = { version = "0.1.3", optional = true }

[dependencies.constance_test_suite]
path = "../constance_test_suite"
default-features = false
features = [
    # compile the test case specified by `CONSTANCE_TEST`
    "tests_selective"
]
optional = true
