[package]
name = "constance_port_riscv_test_driver"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[features]
kernel_benchmarks = ["run"]
kernel_tests = ["run"]
run = [
    "constance_test_suite",
    "constance_port_riscv",
    "constance_portkit",
    "constance",
    "riscv-rt",
    "riscv",
    "log",
]

output-rtt = [
    "rtt-target",
]
output-e310x-uart = [
    "e310x-hal",
    "output-uart",
    "nb",
]
output-u540-uart = [
    "output-uart"
]
output-k210-uart = [
    "k210-hal",
    "output-uart",
    "nb",
]
output-uart = []

interrupt-e310x = [
    "e310x",
]
interrupt-u540-qemu = []
interrupt-k210 = []

board-e310x-red-v = [
    "e310x-hal",
]
board-e310x-qemu = [
    "e310x-hal",
]
board-u540-qemu = []
board-maix = []

[dependencies]
constance_port_riscv = { path = "../constance_port_riscv", optional = true }
constance_portkit = { path = "../constance_portkit", optional = true }
constance = { path = "../constance", optional = true }

rtt-target = { version = "0.2.0", optional = true }
e310x-hal = { version = "0.8.3", optional = true, features = ["g002"] }
k210-hal = { version = "0.2.0", optional = true }
riscv-rt = { version = "0.8.0", optional = true }
e310x = { version = "0.8.1", optional = true }
riscv = { version = "0.6.0", optional = true, features = ["inline-asm"] }
log = { version = "0.4.8", optional = true }
nb = { version = "0.1.3", optional = true }

[dependencies.constance_test_suite]
path = "../constance_test_suite"
default-features = false
features = [
    # compile the test case specified by `CONSTANCE_TEST`
    "tests_selective",
    # enable all of Constance's optional features
    "full",
]
optional = true
