[package]
name = "constance_port_std"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
atomic_ref = { version = "0.1", features = ["nightly"] }
constance = { path = "../constance" }
log = "0.4.8"
env_logger = "0.7.1"
once_cell = "1.4.0"
try-lock = "0.2.2"

[dev-dependencies]
constance_test_suite = { path = "../constance_test_suite" }

[target."cfg(unix)".dependencies]
libc = "0.2.71"
errno = "0.2.5"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.8", features = ["processthreadsapi"] }

