[package]
name = "constance_port_std"
version = "0.0.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simulation environment for running Constance on a hosted environment"
keywords = ["constance", "simulator"]
repository = "https://github.com/yvt/Constance"

[dependencies]
constance = { path = "../constance" }

env_logger = "0.7.1"
once_cell = "1.4.0"
log = "0.4.8"

[dependencies.atomic_ref]
# - “Make the crate `no_std`”
#   <https://github.com/mystor/atomic_ref/pull/1>
# - “Make `AtomicRef::new` `const fn` (nightly-only)”
#   <https://github.com/mystor/atomic_ref/pull/2>
git = "https://github.com/yvt/atomic_ref.git"
rev = "37523c17a2a535f4d04c204d65d2742647abed25"
features = ["nightly"]

[dependencies.try-lock]
# - “Make `TryLock::new` `const fn`”
#   <https://github.com/seanmonstar/try-lock/pull/2>
git = "https://github.com/yvt/try-lock.git"
rev = "cf06bc26a49d511bec22aa36fb68a882e8713d3b"

[dev-dependencies]
constance_test_suite = { path = "../constance_test_suite" }

[target."cfg(unix)".dependencies]
libc = "0.2.71"
errno = "0.2.5"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.8", features = ["processthreadsapi"] }

[[bench]]
name = "test_suite"
harness = false

